# cxi-travel-ins-qa-chatbot

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: README.md  golden-qa.json
infra/local/: README.md  docker-compose.yml
notebook/: 0_indexing.ipynb  1_baseline-native-rag.ipynb  2_hybird-search-rag.ipynb  3_agentic-rag.ipynb  output.txt
