[project]
name = "cxi-travel-ins-qa-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.75.0",
    "deepagents>=0.4.4",
    "fastapi>=0.129.1",
    "fastmcp>=3.0.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "pymupdf>=1.27.1",
    "qdrant-client>=1.17.0",
    "langchain-qdrant>=1.1.0",
    "langgraph-cli>=0.4.12",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "fastembed>=0.7.4",
    "langchain-mongodb>=0.11.0",
    "langchain-milvus>=0.3.3",
    "pymongo[src,srv]>=4.16.0",
    "ipywidgets>=8.1.8",
    "langchain-text-splitters>=1.1.1",
    "mlflow>=3.10.1",
    "opentelemetry-proto>=1.40.0",
]
